@startuml
'https://plantuml.com/class-diagram

package "lexer"{
    class Lexer {
        - codeReader // 输入源读取器
        - ch // 当前字符
        + AnalyseToken() : Token // 分析一个词法单元
    }

    class Token{
        Tag tag //词法单元具体种别
    }

    class Number{
        int val // 数据的值
    }

    class Word{
        String contend // 一个单词的内容
    }

    enum Tag{
        ID
        INTEGER
        AOP
        LOP
        MOP
        ...
    }

    Tag <- Token
    Token <|-- Word
    Token <|-- Number
    Lexer <-- Token
}
@enduml